[package]
name = "db_test"
version = "0.1.0"
edition = "2021"


[dependencies]
surrealdb = { version = "2.3.7", features = ["kv-rocksdb"] }   # add "kv-rocksdb" if you want on-disk
tokio     = { version = "1", features = ["macros","rt-multi-thread"] }
serde     = { version = "1", features = ["derive"] }
secrecy   = "0.10.3"      # zero-ize secrets in RAM
ring      = "0.17"
async-trait = "0.1"
